@@ -241,9 +241,9 @@ function build_from_header($identity = 0) {
         $from_mail .= '@' . $domain;
     
     if ( isset($from_name) ) {
-        $from_name_encoded = encodeHeader($from_name);
+        $from_name_encoded = encodeHeader('"' . $from_name . '"');
         if ($from_name_encoded != $from_name) {
-            return '"' . $from_name_encoded . '" <' . $from_mail . '>';
+            return $from_name_encoded . ' <' . $from_mail . '>';
         }
         return '"' . $from_name . '" <' . $from_mail . '>';
     }
